objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>MM_Secondaday_startTime__c</fullName>
        <label>MM Secondaday startTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MM_Slot_Timeperiod__c</fullName>
        <label>MM_Slot_Timeperiod</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Start_Date__c</fullName>
        <label>MM Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM_Start_Time__c</fullName>
        <label>MM Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MM_no_of_days__c</fullName>
        <formula>(MM_Start_Date__c  -  MM_End_Date__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MM no of days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatchMaking_Type__c</fullName>
        <label>MatchMaking Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Making_Schedules__c</fullName>
        <label>Match Making Schedules</label>
        <picklist>
            <picklistValues>
                <fullName>Live</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_slots_allowed__c</fullName>
        <label>Maximum slots allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_FloorMap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need FloorMap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Appointments_Per_Attendee__c</fullName>
        <label>No Appointments Per Attendee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrganizerId__c</fullName>
        <label>OrganizerId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paypal_Email__c</fullName>
        <inlineHelpText>This is for storing the paypal email address for getting payments</inlineHelpText>
        <label>Paypal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Paypal_Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paypal_Username__c</fullName>
        <label>Paypal Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>PrimaryCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Oil &amp; Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation/Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate, Rental &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional, Scientific and Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management of Companies &amp; Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative &amp; Support &amp; Waste Management &amp; Remediation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure &amp; Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodations &amp; Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services not related to Public Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pubic Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quickregfields__c</fullName>
        <label>Quickregfields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quickreqfields__c</fullName>
        <label>Quickreqfields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Back_End_Color__c</fullName>
        <label>Registration Back End Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Colors__c</fullName>
        <label>Registration Colors</label>
        <referenceTo>Registration_Colors__c</referenceTo>
        <relationshipLabel>Event</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Email_flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Registration Email flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Front_End_Color__c</fullName>
        <label>Registration Front End Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportRecords__c</fullName>
        <defaultValue>300</defaultValue>
        <label>ReportRecords</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <label>Reserved</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryCategory__c</fullName>
        <label>SecondaryCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing and Hunting 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Oil &amp; Gas Extraction 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction 23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing 31-33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade 42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade 44-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation/Warehousing 48-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information 51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services 52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate, Rental &amp; Leasing 53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional, Scientific and Technical Services 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management of Companies &amp; Enterprises 55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative &amp; Support &amp; Waste Management &amp; Remediation Services 56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services 61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services 62</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure &amp; Hospitality 71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodations &amp; Food Services 72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services not related to Public Administration 81</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pubic Administration 92</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <defaultValue>&apos;30&apos;</defaultValue>
        <label>Session Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowAgain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sold__c</fullName>
        <label>Sold</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:05 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:25 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:35 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:55 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:05 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:25 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:35 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:55 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:05 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:25 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Event in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Registration Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Registration Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Emails_to_Attendee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to ensure Sending/Stopping Emails to Attendee</description>
        <label>Stop Emails to Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Emails_to_Event_Admin__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to ensure Sending/Stopping Emails to Event Admin</description>
        <label>Stop Emails to Event Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Schedule_for_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Schedule for Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Through_Paypal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Through Paypal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TwitterHashTag__c</fullName>
        <label>TwitterHashTag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwitterId__c</fullName>
        <label>TwitterId</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type_Of_registration_allow__c</fullName>
        <label>Type Of registration allow</label>
        <picklist>
            <picklistValues>
                <fullName>No restriction</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One person can book one ticket for entire Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets should be different</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numberOfrows__c</fullName>
        <defaultValue>20</defaultValue>
        <label>numberOfrows</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>publish_to_users_flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>publish to users flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scan_attendee_limit__c</fullName>
        <defaultValue>500</defaultValue>
        <label>scan_attendee_limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EV_Title__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>EV_StartDate__c</columns>
        <columns>StartTime__c</columns>
        <columns>EV_EndDate__c</columns>
        <columns>EV_EndTime__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>publish_to_users_flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QR_EVT_{dd}{yy}_{0000000}</displayFormat>
        <label>EV_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>